tests/NormalTests/paczka1/small_fuzzy/64165984.err
Error in line 1: xaY6hs3 A11 1,3
Error in line 2: xaY6hs3 A332 15,7
Error in line 6: eJwTLh1 A113 55,8
Error in line 5: xaY6hs3 S243 92,3
Error in line 12: xaY6hs3 S243 94,17
